Change Folder Statucture

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/19796de735.js" crossorigin="anonymous"></script>
     <!-- RESOURCES FILES-->
-    <link rel="stylesheet" href="resources/css/style.css">
-    <link rel="stylesheet" href="resources/css/responsive.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
 <body>
     <!-- START HEADER SECTION -->
     <header class="header-section banner d-block img-fluid">
         <nav class="navbar navbar-expand-md">
             <div class="container">
-                <a href="#showcase" class="navbar-brand mt-5"><img src="resources/img/main-logo.png" alt="main-logo" 
+                <a href="#showcase" class="navbar-brand mt-5"><img src="assets/img/main-logo.png" alt="main-logo" 
                     class="d-block img-fluid"></a>
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item mr-3">
@@ -50,7 +50,7 @@
         </nav>
         <div class="row featurette mx-auto">
             <div class="col-md-6">
-                <img class="d-block img-fluid" src="resources/img/slide-img.png" alt="banner-img">
+                <img class="d-block img-fluid" src="assets/img/slide-img.png" alt="banner-img">
             </div>
             <div class="col-md-6">
                 <h1 class="mb-4">Our new Prometium theme if for everyone</h1>
@@ -70,21 +70,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="d-block img-fluid" src="resources/img/s-icona.png" alt="icon-img">
+                    <img class="d-block img-fluid" src="assets/img/s-icona.png" alt="icon-img">
                     <h3>Creative ideas</h3>
                     <p class="little-description">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                         labore et dolor erat, sed diam voluptua.</p>
                     <a class="btn" role="button" href="#">Read More</a>
                 </div>
                 <div class="col-md-4">
-                    <img class="d-block img-fluid" src="resources/img/s-iconb.png" alt="icon-img">
+                    <img class="d-block img-fluid" src="assets/img/s-iconb.png" alt="icon-img">
                     <h3>Awesome workspace</h3>
                     <p class="little-description ">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
                         ut labore et dolor erat, sed diam voluptua.</p>
                     <a class="btn" role="button" href="#">Read More</a>
                 </div>
                 <div class="col-md-4">
-                    <img class="d-block img-fluid" src="resources/img/s-iconc.png" alt="icon-img">
+                    <img class="d-block img-fluid" src="assets/img/s-iconc.png" alt="icon-img">
                     <h3>Fantastic shapes</h3>
                     <p class="little-description">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
                         utlabore et dolor erat, sed diam voluptua.</p>
@@ -112,13 +112,13 @@
                             </ol>
                             <div class="carousel-inner" role="listbox">
                                 <div class="carousel-item active">
-                                    <img class="d-block img-fluid" src="resources/img/slide0.jpg" alt="first slide">
+                                    <img class="d-block img-fluid" src="assets/img/slide0.jpg" alt="first slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="resources/img/slide1.jpg" alt="second slide">
+                                    <img class="d-block img-fluid" src="assets/img/slide1.jpg" alt="second slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="resources/img/slide2.jpg" alt=" third slide">
+                                    <img class="d-block img-fluid" src="assets/img/slide2.jpg" alt=" third slide">
                                 </div>
                             </div>
                         </div>
@@ -127,7 +127,7 @@
                 <div class="col-6">
                     <div class="features-items">
                         <div class="item-icon">
-                            <img class="d-block img-fluid " src="resources/img/features1.png">
+                            <img class="d-block img-fluid " src="assets/img/features1.png">
                         </div>
                         <div class="item-describe">
                             <h4>Stet clita ea et gubergren, kasd magna no rebum</h4>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="features-items">
                         <div class="item-icon">
-                            <img class="d-block img-fluid" src="resources/img/features2.png">
+                            <img class="d-block img-fluid" src="assets/img/features2.png">
                         </div>
                         <div class="item-describe">
                             <h4>Duis autem vel eum iriure dolor in hendrerit in</h4>
@@ -179,26 +179,26 @@
                     </ol>
                     <div class="carousel-inner flex" role="listbox">
                         <div class="col-md-3 carousel-item active customer">
-                            <img src="resources/img/cus1.jpg" alt="customer-img" class="d-block img-fluid active">
+                            <img src="assets/img/cus1.jpg" alt="customer-img" class="d-block img-fluid active">
                             <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, quis nostrud exer
                                         tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
                             <h4><span>Jema Girson</span></h4>
                         </div>
                         <div class="col-md-3 carousel-item customer active">
-                            <img src="resources/img/cus0.jpg" alt="customer-img" class="d-block img-fluid">
+                            <img src="assets/img/cus0.jpg" alt="customer-img" class="d-block img-fluid">
                             <p class="little-description"><cite><q>“ Nam liber tempor cum soluta nobis eleifend
                                         optioncongue nihil imperdiet doming id quo nostrp ex ea commodo
                                         consequat.“</q></cite></p>
                             <h4><span>Johnson Paul</span></h4>
                         </div>
                         <div class="col-md-3 carousel-item customer active">
-                            <img src="resources/img/cus2.jpg" alt="customer-img" class="d-bock img-fluid">
+                            <img src="assets/img/cus2.jpg" alt="customer-img" class="d-bock img-fluid">
                             <p class="little-description"><cite><q>“ Nam liber tempor cum soluta nobis eleifend option
                                         congued quo nostrp ex ea commodo consequat. “</q></cite></p>
                             <h4><span>Jema Girson</span></h4>
                         </div>
                         <div class="col-md-3 carousel-item customer">
-                            <img src="resources/img/cus3.jpg" alt="customer-img" class="d-bock img-fluid">
+                            <img src="assets/img/cus3.jpg" alt="customer-img" class="d-bock img-fluid">
                             <p class="little-description"><cite><q>“ Nam liber tempor cum soluta nobis eleifend option
                                         conguedquo nostrp ex ea commodo consequat. “</q></cite></p>
                             <h4><span>Jema Girson</span></h4>
@@ -214,7 +214,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img src="resources/img/seo-icon0.png">
+                    <img src="assets/img/seo-icon0.png">
                     <h4>MARKETING STRATEGIES</h4>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
                         nonumy eirmod tempor invidunt ut labore et dolore. Lorem ipsum dolor sit amet, consetetur
@@ -222,7 +222,7 @@
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="resources/img/seo-icon1.png">
+                    <img src="assets/img/seo-icon1.png">
                     <h4>MARKETING STRATEGIES</h4>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
                         nonumy eirmod tempor invidunt ut labore et dolore. Lorem ipsum dolor sit amet, consetetur
@@ -230,7 +230,7 @@
                     </p>
                 </div>
                 <div class="col-md-4 d-block">
-                    <img src="resources/img/seo-icon2.png">
+                    <img src="assets/img/seo-icon2.png">
                     <h4>MARKETING STRATEGIES</h4>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
                         nonumy eirmod tempor invidunt ut labore et dolore. Lorem ipsum dolor sit amet, consetetur
@@ -240,7 +240,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <img src="resources/img/seo-icon3.png">
+                    <img src="assets/img/seo-icon3.png">
                     <h4>MARKETING STRATEGIES</h4>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
                         nonumy eirmod tempor invidunt ut labore et dolore. Lorem ipsum dolor sit amet, consetetur
@@ -248,7 +248,7 @@
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="resources/img/seo-icon4.png">
+                    <img src="assets/img/seo-icon4.png">
                     <h4>MARKETING STRATEGIES</h4>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
                         nonumy eirmod tempor invidunt ut labore et dolore. Lorem ipsum dolor sit amet, consetetur
@@ -256,7 +256,7 @@
                     </p>
                 </div>
                 <div class="col-md-4 d-block">
-                    <img src="resources/img/seo-icon5.png">
+                    <img src="assets/img/seo-icon5.png">
                     <h4>MARKETING STRATEGIES</h4>
                     <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
                         nonumy eirmod tempor invidunt ut labore et dolore. Lorem ipsum dolor sit amet, consetetur
@@ -302,22 +302,22 @@
             </div>
             <div class="row">
                 <div class="col-md-3 team-member">
-                    <img class="d-block img-fluid" src="resources/img/team0.jpg">
+                    <img class="d-block img-fluid" src="assets/img/team0.jpg">
                     <h4><span>John Merkel</span></h4>
                     <h5><span class="title">Executive Officer</span></h5>
                 </div>
                 <div class="col-md-3 team-member">
-                    <img class="d-block img-fluid" src="resources/img/team2.jpg">
+                    <img class="d-block img-fluid" src="assets/img/team2.jpg">
                     <h4><span>Marcus Leroy</span></h4>
                     <h5><span class="title">CEO / CO-FOUNDER</span></h5>
                 </div>
                 <div class="col-md-3 team-member">
-                    <img class="d-block img-fluid" src="resources/img/team1.jpg">
+                    <img class="d-block img-fluid" src="assets/img/team1.jpg">
                     <h4><span>Patrick Stuard</span></h4>
                     <h5><span class="title">Developer</span></h5>
                 </div>
                 <div class="col-md-3 team-member">
-                    <img class="d-block img-fluid" src="resources/img/team3.jpg">
+                    <img class="d-block img-fluid" src="assets/img/team3.jpg">
                     <h4><span>Phil Jones</span></h4>
                     <h5><span class="title">MARKETING MANAGER</span></h5>
                 </div>
