--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,19 +12,27 @@
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/19796de735.js" crossorigin="anonymous"></script>
     <!-- RESOURCES FILES-->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
 </head>
+
 <body>
     <!-- START HEADER SECTION -->
     <header class="header-section banner d-block img-fluid">
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-md mx-auto">
             <div class="container">
-                <a href="#showcase" class="navbar-brand mt-5"><img src="assets/img/main-logo.png" alt="main-logo" 
-                    class="d-block img-fluid"></a>
+                <div class="row">
+                <a href="#showcase" class="navbar-brand main-logo"><img src="assets/img/main-logo.png" alt="main-logo"
+                        class="d-block img-fluid"></a>
+                    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item mr-3">
                         <a class="nav-link" href="#">Home</a>
@@ -44,8 +53,10 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
-                <a class="btn btn-a mt-5 mr-4 py-2 px-4" role="button" href="#">Login</a>
-                <a class="btn btn-b mt-5 py-2 px-5" role="button" href="#">Get Started</a>
+                </div>
+                <a class="btn btn-a" role="button" href="#">Login</a>
+                <a class="btn btn-b" role="button" href="#">Get Started</a>
+                </div>
             </div>
         </nav>
         <div class="row featurette mx-auto">
@@ -55,7 +66,7 @@
             <div class="col-md-6">
                 <h1 class="mb-4">Our new Prometium theme if for everyone</h1>
                 <p class="little-description my-3">Duis autem vel eum iriure dolor in hendrerit in vulputate velit
-                essemugiat nuesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                    essemugiat nuesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
                 <a class="btn btn-lg" role="button" href="#">Get Started Today</a>
             </div>
         </div>
@@ -132,7 +143,7 @@
                         <div class="item-describe">
                             <h4>Stet clita ea et gubergren, kasd magna no rebum</h4>
                             <p>Bandit praesent luptatum zzril delenit augue delenitaugue
-                            duis dolore duis dolore te feugait nulla facilis t quod mazimplacerat erat volutpat.</p>
+                                duis dolore duis dolore te feugait nulla facilis t quod mazimplacerat erat volutpat.</p>
                         </div>
                     </div>
                     <div class="features-items">
@@ -142,7 +153,7 @@
                         <div class="item-describe">
                             <h4>Duis autem vel eum iriure dolor in hendrerit in</h4>
                             <p>Bandit praesent te feugait nulla delenit augue duis dolore
-                            facilist quod mazimplacerat famagna aliquam erat volutpat.</p>
+                                facilist quod mazimplacerat famagna aliquam erat volutpat.</p>
                         </div>
                     </div>
                     <div class="features-items">
@@ -152,8 +163,8 @@
                         <div class="item-describe">
                             <h4>Duis autem vel eum iriure dolor in hendrerit in</h4>
                             <p>Bandit praesent luptatum zzril delenit augue duis doloredelenit
-                            augue duis dolore delenit augue duis dolore facilis t quod mazimplacerat
-                            famagna aliquam erat volutpat.
+                                augue duis dolore delenit augue duis dolore facilis t quod mazimplacerat
+                                famagna aliquam erat volutpat.
                             </p>
                         </div>
                     </div>
@@ -287,7 +298,8 @@
                     <h3>VALUE THREE</h3>
                     <h2>Company Solutions</h2>
                     <p class="value-three">Nam liber tempor soluta nobis cum soluta nobis eleifend
-                        option congue nihil imperdiet doming id quod mazm, nihil imperdiet doming quis nostrud suscipit.</p>
+                        option congue nihil imperdiet doming id quod mazm, nihil imperdiet doming quis nostrud suscipit.
+                    </p>
                 </div>
             </div>
         </div>
@@ -398,22 +410,22 @@
             </div>
             <div class="row coll">
                 <div class="col-md-3">
-                    <img src="resources/img/coll0.png" class="d-block img-fluid">
+                    <img src="assets/img/coll0.png" class="d-block img-fluid">
                     <h4>Business Solutions</h4>
                     <p>Congue nihil imperdiet doming <br><em>option congue nihil.</em></p>
                 </div>
                 <div class="col-md-3">
-                    <img src="resources/img/coll1.png" class="d-block img-fluid">
+                    <img src="assets/img/coll1.png" class="d-block img-fluid">
                     <h4>Business Solutions</h4>
                     <p>Congue nihil imperdiet doming<br><em>option congue nihil.</em></p>
                 </div>
                 <div class="col-md-3">
-                    <img src="resources/img/coll2.png" class="d-block img-fluid">
+                    <img src="assets/img/coll2.png" class="d-block img-fluid">
                     <h4>Business Solutions</h4>
                     <p>Congue nihil imperdiet doming <br><em>option congue nihil.</em></p>
                 </div>
                 <div class="col-md-3">
-                    <img src="resources/img/coll3.png" class="d-block img-fluid">
+                    <img src="assets/img/coll3.png" class="d-block img-fluid">
                     <h4>Business Solutions</h4>
                     <p>Congue nihil imperdiet doming <br><em>option congue nihil.</em></p>
                 </div>
@@ -491,16 +503,18 @@
                 </div>
                 <div class="col-md-3">
                     <h6>INSTAGRAM FEED</h6>
-                    <img src="resources/img/insta.jpg" alt="INSTAGRAM FEED" class="d-block img fluid">
+                    <img src="assets/img/insta.jpg" alt="INSTAGRAM FEED" class="d-block img fluid">
                 </div>
                 <div class="col-md-3">
                     <h6>CONTACT US</h6>
                     <div class="contact-icon">
                         <div>
-                            <a href=""><i class="fas fa-map-marker-alt"></i><span class="contact-text">127 Sith Avenue, 54571 New York City</span></a>
+                            <a href=""><i class="fas fa-map-marker-alt"></i><span class="contact-text">127 Sith Avenue,
+                                    54571 New York City</span></a>
                         </div>
                         <div>
-                            <a href=""><i class="fas fa-phone-alt"></i><span class="contact-text">+49 123 456 789</span></a>
+                            <a href=""><i class="fas fa-phone-alt"></i><span class="contact-text">+49 123 456
+                                    789</span></a>
                         </div>
                         <div>
                             <a href=""><i class="fas fa-at"></i><span class="contact-text">info@prometium.com</span></a>
@@ -515,22 +529,22 @@
         <div class="container">
             <div class="row py-5">
                 <div class="logo col-md-3">
-                    <img src="resources/img/footer-logo.png" class="d-block img-fluid" alt="">
+                    <img src="assets/img/footer-logo.png" class="d-block img-fluid" alt="">
                 </div>
                 <div class="copyright col-md-6 my-auto">
                     <p>Copyright 2017 © <b>Prometium - Multi-Purpose PSD template</b> | All Rights Reserved</p>
                 </div>
                 <div class="flat-icon col-md-3">
-                    <img src="resources/img/f-icon.png" alt="">
-                    <img src="resources/img/f-icon1.png" alt="">
-                    <img src="resources/img/f-icon2.png" alt="">
-                    <img src="resources/img/f-icon3.png" alt="">
-                    <img src="resources/img/f-icon4.png" alt="">
+                    <img src="assets/img/f-icon.png" alt="">
+                    <img src="assets/img/f-icon1.png" alt="">
+                    <img src="assets/img/f-icon2.png" alt="">
+                    <img src="assets/img/f-icon3.png" alt="">
+                    <img src="assets/img/f-icon4.png" alt="">
                 </div>
             </div>
         </div>
     </div>
-                         <!--END-->
+    <!--END-->
     <!-- JS links -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
