--- a/index.html
+++ b/index.html
@@ -26,36 +26,36 @@
         <nav class="navbar navbar-expand-md mx-auto">
             <div class="container">
                 <div class="row">
-                <a href="#showcase" class="navbar-brand main-logo"><img src="assets/img/main-logo.png" alt="main-logo"
-                        class="d-block img-fluid"></a>
+                    <a href="#showcase" class="navbar-brand main-logo"><img src="assets/img/main-logo.png"
+                            alt="main-logo" class="d-block img-fluid"></a>
                     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-bars"></i>
                     </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item mr-3">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link" href="#">About Us</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link" href="#">Portfolio</a>
-                    </li>
-                    <li class="nav-item mx-3">
-                        <a class="nav-link" href="#">Our Blog</a>
-                    </li>
-                    <li class="nav-item ml-3">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-                </div>
-                <a class="btn btn-a" role="button" href="#">Login</a>
-                <a class="btn btn-b" role="button" href="#">Get Started</a>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item mr-3">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item mx-4">
+                                <a class="nav-link" href="#">About Us</a>
+                            </li>
+                            <li class="nav-item mx-4">
+                                <a class="nav-link" href="#">Services</a>
+                            </li>
+                            <li class="nav-item mx-4">
+                                <a class="nav-link" href="#">Portfolio</a>
+                            </li>
+                            <li class="nav-item mx-4">
+                                <a class="nav-link" href="#">Our Blog</a>
+                            </li>
+                            <li class="nav-item ml-4">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <a class="btn btn-a" role="button" href="#">Login</a>
+                    <a class="btn btn-b" role="button" href="#">Get Started</a>
                 </div>
             </div>
         </nav>
@@ -190,26 +190,26 @@
                     </ol>
                     <div class="carousel-inner flex" role="listbox">
                         <div class="col-md-3 carousel-item active customer">
-                            <img src="assets/img/cus1.jpg" alt="customer-img" class="d-block img-fluid active">
+                            <img src="assets/img/cus1.jpg" alt="customer-img" class="d-block img-fluid mx-auto active">
                             <p class="little-description"><cite><q>“ Ut wisi enim ad minim veniam, quis nostrud exer
                                         tation ullamcorper suscipit lobortis uip exconsequat. “</q></cite></p>
                             <h4><span>Jema Girson</span></h4>
                         </div>
                         <div class="col-md-3 carousel-item customer active">
-                            <img src="assets/img/cus0.jpg" alt="customer-img" class="d-block img-fluid">
+                            <img src="assets/img/cus0.jpg" alt="customer-img" class="d-block img-fluid mx-auto">
                             <p class="little-description"><cite><q>“ Nam liber tempor cum soluta nobis eleifend
                                         optioncongue nihil imperdiet doming id quo nostrp ex ea commodo
                                         consequat.“</q></cite></p>
                             <h4><span>Johnson Paul</span></h4>
                         </div>
                         <div class="col-md-3 carousel-item customer active">
-                            <img src="assets/img/cus2.jpg" alt="customer-img" class="d-bock img-fluid">
+                            <img src="assets/img/cus2.jpg" alt="customer-img" class="d-bock img-fluid  mx-auto">
                             <p class="little-description"><cite><q>“ Nam liber tempor cum soluta nobis eleifend option
                                         congued quo nostrp ex ea commodo consequat. “</q></cite></p>
                             <h4><span>Jema Girson</span></h4>
                         </div>
                         <div class="col-md-3 carousel-item customer">
-                            <img src="assets/img/cus3.jpg" alt="customer-img" class="d-bock img-fluid">
+                            <img src="assets/img/cus3.jpg" alt="customer-img" class="d-bock img-fluid mx-auto">
                             <p class="little-description"><cite><q>“ Nam liber tempor cum soluta nobis eleifend option
                                         conguedquo nostrp ex ea commodo consequat. “</q></cite></p>
                             <h4><span>Jema Girson</span></h4>
