--- a/index.html
+++ b/index.html
@@ -80,26 +80,26 @@
     <section class="services-section">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 service-item">
                     <img class="d-block img-fluid" src="assets/img/s-icona.png" alt="icon-img">
                     <h3>Creative ideas</h3>
-                    <p class="little-description">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    <p class="service-text">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                         labore et dolor erat, sed diam voluptua.</p>
-                    <a class="btn" role="button" href="#">Read More</a>
+                    <a class="btn btn-md" role="button" href="#">Read More</a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 service-item">
                     <img class="d-block img-fluid" src="assets/img/s-iconb.png" alt="icon-img">
                     <h3>Awesome workspace</h3>
-                    <p class="little-description ">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        ut labore et dolor erat, sed diam voluptua.</p>
-                    <a class="btn" role="button" href="#">Read More</a>
+                    <p class="service-text">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                        labore et dolor erat, sed diam voluptua.</p>
+                    <a class="btn btn-md" role="button" href="#">Read More</a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 service-item">
                     <img class="d-block img-fluid" src="assets/img/s-iconc.png" alt="icon-img">
                     <h3>Fantastic shapes</h3>
-                    <p class="little-description">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
-                        utlabore et dolor erat, sed diam voluptua.</p>
-                    <a class="btn" role="button" href="#">Read More</a>
+                    <p class="service-text">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                        labore et dolor erat, sed diam voluptua.</p>
+                    <a class="btn btn-md" role="button" href="#">Read More</a>
                 </div>
             </div>
         </div>
@@ -356,7 +356,7 @@
                         <span class="check-mark1">free securityservice</span><br>
                         <span class="check-mark1">2dashboard accounts</span>
                     </p>
-                    <a class="btn" href="#">Sign Up Now</a>
+                    <a class="btn btn-md" role="button" href="#">Sign Up Now</a>
                 </div>
                 <div class="col-md-3 premium-plan pb-3 pt-5">
                     <h5 class="plan5">premium plan</h5>
@@ -369,7 +369,7 @@
                         <span class="check-mark2">free securityservice</span><br>
                         <span class="check-mark2">2dashboard accounts</span>
                     </p>
-                    <a href="#" class="btn active" role="button" aria-pressed="true">Sign Up Now</a>
+                    <a href="#" class="btn  btn-md active" role="button" aria-pressed="true">Sign Up Now</a>
                 </div>
                 <div class="col-md-3 business-plan pb-3 pt-5">
                     <h5 class="plan5">business plan</h5>
@@ -382,7 +382,7 @@
                         <span class="check-mark3">free securityservice</span><br>
                         <span class="check-mark3">2dashboard accounts</span>
                     </p>
-                    <a class="btn" href="#">Sign Up Now</a>
+                    <a class="btn btn-md" role="button" href="#">Sign Up Now</a>
                 </div>
                 <div class="col-md-3 ultimate-plan pb-3 pt-5">
                     <h5 class="plan5">ultimate plan</h5>
@@ -395,7 +395,7 @@
                         <span class="check-mark4">free securityservice</span><br>
                         <span class="check-mark4">2dashboard accounts</span>
                     </p>
-                    <a class="btn" href="#">Sign Up Now</a>
+                    <a class="btn btn-md" role="button" href="#">Sign Up Now</a>
                 </div>
             </div>
         </div>
